syntax = "proto3";

package merkle_proof;

message MerkleProof {
    bytes address = 1;
    repeated bytes siblings = 2;
    repeated bool indices = 3;
}

